--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ main {
             rgba(0, 0, 0, 0.45),
             rgba(0, 0, 0, 0.45)
         ),
-        url("/bg.png");
+        url("../bg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -730,5 +730,6 @@ footer {
     align-items: center;
     gap: 10px;
 }
+
 
 
